# DullRNAseq

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
src/: Makefile.am  Makefile.in  aligner.cpp  aligner.h  genomeparser.cpp  genomeparser.h  main.cpp  ngsParser.cpp  ngsParser.h
